# rnm

./: .gitignore  Cargo.toml  README.md
.history/src/: app_20251204122211.rs  config_20251204121956.rs  config_20251204122456.rs  keybindings_20251204122456.rs  main_20251204122106.rs  main_20251204122113.rs  main_20251204122122.rs  main_20251204122146.rs  operations_20251204122015.rs  operations_20251204122048.rs  ui_20251204122250.rs  ui_20251204122307.rs
src/: app.rs  config.rs  keybindings.rs  main.rs  operations.rs  ui.rs
