[package]
name = "rnm"
version = "0.1.0"
edition = "2021"
description = "A modern TUI tool for batch renaming files"
authors = ["Luca"]
license = "MIT"

[[bin]]
name = "rnm"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# CLI Argument Parsing
clap = { version = "4.5", features = ["derive"] }

# File system utilities
glob = "0.3"

# Regex support
regex = "1.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration & Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
serde_json = "1.0.145"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

